--- a/package.json
+++ b/package.json
@@ -1,4 +1,22 @@
 {
+  "name": "celebrate-together",
+  "version": "1.0.0",
+  "description": "Fő projekt munka tárolója",
+  "main": "app.js",
+  "scripts": {
+    "start": "nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/projekt-labor/celebrate-together.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/projekt-labor/celebrate-together/issues"
+  },
+  "homepage": "https://github.com/projekt-labor/celebrate-together#readme",
   "dependencies": {
     "express": "^4.18.1",
     "nodemon": "^2.0.20",
