--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "^4.18.1",
     "express-flash-message": "^2.1.0",
     "express-session": "^1.17.3",
+    "express-validator": "5.3.0",
+    "helmet": "^6.0.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
