--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "start": "^5.1.0"
   }
 }
