--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/projekt-labor/celebrate-together.git"
   },
-  "author": "Göllény Máté Endre, Bonczók Norbert, Martin Kondor",
+  "author": "Göllény Máté Endre",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/projekt-labor/celebrate-together/issues"
