--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "helmet": "^6.0.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.7",
     "nodemon": "^2.0.20",
     "pug": "^3.0.2"
   }
